changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Bug fix: when building a new floor on top of an old floor, the old one was
never removed, resulting in a stack of floors in some buildable areas.
 server/build_map.c
Raphaël Quinet 2008-08-03

Fix for bug #2028541: Any object using a non-default move_slow_penalty was
always saved with the value 0 because the code was using FAST_SAVE_LONG
instead of FAST_SAVE_DOUBLE for a floating-point value.
 common/loader.l
Raphaël Quinet 2008-08-02

Change regions file name to 'regions.reg'.
 include/config.h
Nicolas Weeger 2008-08-02

If an object of type CHECK_INV blocks movement (e.g. move_block all) and if
it contains a message, then display that message to those who are blocked.
This allows the inventory checkers to behave a bit like locked doors.
 common/map.c
Raphaël Quinet 2008-07-31

Allow other archetypes than fingers to be given as trophies in arena battles.
In order to do that, the battleground should have other_arch set to the
archetype to be generated.  If no other_arch is set, then fingers will be
generated as before.  Also, the trophies will have their value, type and
material set to 0 so that they cannot be used nor destroyed.
 include/sproto.h
 server/attack.c
 server/disease.c
 server/pets.c
 server/player.c
 server/spell_util.c
Raphaël Quinet 2008-07-28

lib/smooth: updated by 'make collect' after Ryo's changes to the archetypes.
Raphaël Quinet 2008-07-28

plugins/*/Makefile.am:  Remove  -Xlinker -export-dynamic -Xlinker -Bsymbolic
    from extra LDFLAGS.  Those are gnu specific linker options which cause